--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="dark" />
   <title>Notenexpres – Start</title>
 
   <style>
     :root{
-      --brand:#E53D23;            /* Notenexpres oranje */
-      --text:#1b1b1b;
-      --muted:#555;
-      --shadow:0 16px 34px rgba(0,0,0,.10);
-      --radius:22px;
-      --side:22px;               /* dikte van de oranje zijstrepen */
+      --brand:#E53D23;
+      --brand-deep:#C4321C;
+
+      --bg-1:#0f0f10;
+      --bg-2:#171314;
+      --text:#F2F2F3;
+      --muted:#B9BBC1;
+      --muted-2:#8E9097;
+
+      --radius:24px;
+      --btn-radius:18px;
+      --shadow: 0 22px 70px rgba(0,0,0,.52);
+
+      --side: clamp(22px, 5vw, 56px);
+
+      --chip: rgba(255,255,255,.06);
+      --chip-border: rgba(255,255,255,.10);
+      --line: rgba(229,61,35,.16);
     }
 
     *{ box-sizing:border-box; }
@@ -20,9 +33,14 @@
     body{
       margin:0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background:#fff;
-      color:var(--text);
       min-height:100vh;
+      color:var(--text);
+      background:
+        radial-gradient(900px 520px at 50% 18%, rgba(229,61,35,.18), rgba(229,61,35,0) 60%),
+        linear-gradient(180deg, var(--bg-2), var(--bg-1) 72%);
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+      color-scheme: dark;
     }
 
     /* Oranje strepen links/rechts */
@@ -31,8 +49,16 @@
       position:fixed;
       top:0; bottom:0;
       width:var(--side);
-      background:var(--brand);
       z-index:0;
+      background:
+        linear-gradient(180deg,
+          rgba(255,255,255,.10) 0%,
+          rgba(255,255,255,0) 10%,
+          rgba(0,0,0,.10) 100%),
+        linear-gradient(180deg, var(--brand), var(--brand-deep));
+      box-shadow:
+        inset 0 0 0 1px rgba(0,0,0,.22),
+        inset 0 12px 42px rgba(0,0,0,.22);
     }
     body::before{ left:0; }
     body::after{ right:0; }
@@ -40,122 +66,362 @@
     .wrap{
       position:relative;
       z-index:1;
-      width:min(640px, calc(100% - (var(--side) * 2) - 24px));
-      margin:0 auto;
-      padding: 18px 0 46px;
+      max-width: 1080px;
+      margin: 0 auto;
+      padding: 26px 16px 54px;
+    }
+
+    /* Topbar (zelfde vibe als recepten/allergenen) */
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      margin-bottom: 18px;
+    }
+
+    .brandRow{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      min-width:0;
+    }
+    .brandRow img{
+      width:46px;
+      height:46px;
+      border-radius: 14px;
+      object-fit: cover;
+      box-shadow: 0 10px 26px rgba(0,0,0,.35);
+      border:1px solid rgba(255,255,255,.08);
+      background: rgba(255,255,255,.06);
+    }
+    .brandRow h1{
+      font-size: 18px;
+      margin:0;
+      line-height: 1.1;
+      letter-spacing: .2px;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow: ellipsis;
+    }
+    .brandRow p{
+      margin:4px 0 0;
+      font-size: 12.5px;
+      color: var(--muted);
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow: ellipsis;
+    }
+
+    .nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+    }
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding: 10px 14px;
+      border-radius: var(--btn-radius);
+      color: var(--text);
+      text-decoration:none;
+      background: rgba(255,255,255,.06);
+      border: 1px solid rgba(255,255,255,.10);
+      box-shadow: 0 10px 34px rgba(0,0,0,.22);
+      transition: transform .12s ease, border-color .12s ease, background .12s ease;
+      font-weight: 700;
+      font-size: 13.5px;
+      letter-spacing: .1px;
+    }
+    .btn:hover{
+      transform: translateY(-1px);
+      border-color: rgba(229,61,35,.45);
+      background: rgba(229,61,35,.10);
+    }
+    .btn.primary{
+      background: linear-gradient(180deg, rgba(229,61,35,.95), rgba(196,50,28,.95));
+      border-color: rgba(0,0,0,.18);
+      color: #111;
+      font-weight: 900;
+    }
+
+    .hero{
+      margin-top: 12px;
+      padding: 18px;
+      border-radius: var(--radius);
+      background:
+        linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03)),
+        radial-gradient(820px 320px at 10% 10%, rgba(229,61,35,.22), transparent 60%);
+      border: 1px solid rgba(255,255,255,.10);
+      box-shadow: var(--shadow);
+    }
+    .hero h2{
+      margin:0 0 8px;
+      font-size: 20px;
+      letter-spacing:.2px;
+    }
+    .hero .sub{
+      margin:0;
+      color: var(--muted);
+      font-size: 13.5px;
+      line-height: 1.35;
+    }
+
+    .hr{
+      margin-top: 12px;
+      height:1px;
+      background: linear-gradient(90deg, transparent, var(--line), transparent);
+    }
+
+    /* Actie-cards (zelfde “luxe” kaartstijl) */
+    .grid{
+      margin-top: 16px;
+      display:grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 14px;
+    }
+    @media (max-width: 820px){ .grid{ grid-template-columns: 1fr; } }
+    @media (max-width: 900px){
+      .nav{ justify-content:flex-start; }
+      .topbar{ flex-direction: column; align-items: stretch; }
     }
 
     .card{
-      background:#fff;
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      border:1px solid rgba(0,0,0,.07);
-      padding: 18px 18px 22px;
-    }
-
-    /* Logo blok: wit vlak, geen rare randjes */
-    .logoBox{
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border: 1px solid rgba(255,255,255,.10);
+      box-shadow: 0 16px 55px rgba(0,0,0,.34);
+      overflow:hidden;
       display:flex;
-      justify-content:center;
-      align-items:center;
-      padding: 10px 10px 0;
+      flex-direction:column;
     }
 
-    .logo{
-      width:min(520px, 92%);
-      height:auto;
-      display:block;
-      image-rendering:auto;
-    }
-
-    h1{
-      text-align:center;
-      margin: 14px 0 6px;
-      font-size: clamp(28px, 6vw, 44px);
-      letter-spacing:.2px;
-    }
-
-    .sub{
-      text-align:center;
-      margin: 0 0 18px;
-      color:var(--muted);
-      font-size: clamp(15px, 3.4vw, 18px);
-    }
-
-    .btn{
+    .card .head{
+      padding: 14px 14px 12px;
+      border-bottom: 1px solid rgba(255,255,255,.06);
+      background: radial-gradient(520px 190px at 15% 0%, rgba(229,61,35,.18), transparent 60%);
       display:flex;
       align-items:center;
-      justify-content:center;
-      gap:12px;
+      justify-content:space-between;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .card .title{
+      margin:0;
+      font-size: 16px;
+      letter-spacing: .15px;
+      line-height: 1.2;
+      font-weight: 900;
+    }
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      padding: 6px 10px;
+      border-radius: 999px;
+      background: rgba(229,61,35,.14);
+      border: 1px solid rgba(229,61,35,.34);
+      color: var(--text);
+      font-size: 12px;
+      font-weight: 900;
+      letter-spacing:.1px;
+      white-space:nowrap;
+    }
+    .card .body{
+      padding: 12px 14px 14px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+    }
+    .desc{
+      margin:0;
+      color: var(--muted);
+      font-size: 13px;
+      line-height: 1.35;
+    }
+
+    .action{
+      margin-top: 6px;
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+
+    .biglink{
       width:100%;
-      padding:18px 16px;
-      margin:14px 0;
-      border-radius:18px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      padding: 14px 14px;
+      border-radius: 18px;
       text-decoration:none;
-      font-weight:800;
-      font-size: clamp(18px, 4.1vw, 22px);
-      color: var(--brand);
-      background:#fff;
-      border:2px solid rgba(229,61,35,.28);
-      box-shadow: 0 10px 18px rgba(0,0,0,.06);
-      transition: transform .12s ease, background .12s ease, border-color .12s ease;
+      color: var(--text);
+      background: rgba(255,255,255,.04);
+      border: 1px solid rgba(255,255,255,.10);
+      transition: transform .12s ease, border-color .12s ease, background .12s ease;
+      font-weight: 900;
+      letter-spacing:.1px;
     }
-
-    .btn:hover{
+    .biglink:hover{
       transform: translateY(-1px);
-      background: #fff3ef;
       border-color: rgba(229,61,35,.45);
+      background: rgba(229,61,35,.10);
+    }
+    .biglink.primary{
+      background:
+        radial-gradient(600px 220px at 50% 0%, rgba(255,255,255,.22), rgba(255,255,255,0) 55%),
+        linear-gradient(180deg, rgba(229,61,35,.95), rgba(196,50,28,.95));
+      border-color: rgba(0,0,0,.18);
+      color:#111;
+    }
+    .biglink.primary:hover{
+      background:
+        radial-gradient(600px 220px at 50% 0%, rgba(255,255,255,.26), rgba(255,255,255,0) 55%),
+        linear-gradient(180deg, rgba(229,61,35,1), rgba(196,50,28,1));
     }
 
     .icon{
-      font-size:22px;
+      font-size: 20px;
       line-height:1;
+      transform: translateY(-.5px);
+    }
+    .arrow{
+      opacity:.9;
+      font-size: 18px;
     }
 
-    .note{
-      text-align:center;
-      margin-top: 6px;
-      font-size: 12.5px;
-      color:#666;
+    .footnote{
+      margin-top: 18px;
+      color: var(--muted-2);
+      font-size: 12px;
+      line-height: 1.45;
+      opacity: .95;
     }
 
-    @media (max-width:360px){
-      :root{ --side:16px; }
-      .btn{ padding:16px 14px; border-radius:16px; }
+    /* Social row als compacte “chips” */
+    .socialRow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+    }
+    .socialBtn{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding: 10px 12px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.04);
+      color: var(--text);
+      text-decoration:none;
+      font-weight: 900;
+      font-size: 13px;
+      transition: transform .12s ease, border-color .12s ease, background .12s ease;
+    }
+    .socialBtn:hover{
+      transform: translateY(-1px);
+      border-color: rgba(229,61,35,.45);
+      background: rgba(229,61,35,.10);
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <div class="card">
-
-      <div class="logoBox">
-        <!-- Zorg dat logo.jpg naast index.html staat -->
-        <img class="logo" src="logo.jpg" alt="Notenexpres logo">
+  <main class="wrap">
+    <header class="topbar">
+      <div class="brandRow">
+        <img src="logo.jpg" alt="Notenexpres logo" onerror="this.style.display='none'">
+        <div style="min-width:0">
+          <h1>Notenexpres – Start</h1>
+          <p>Allergenen, recepten en links – snel via QR.</p>
+        </div>
       </div>
 
-      <h1>Welkom bij Notenexpres</h1>
-      <div class="sub">Maak je keuze</div>
+      <nav class="nav" aria-label="Navigatie">
+        <a class="btn" href="recepten.html">Recepten</a>
+        <a class="btn" href="allergenen.html">Allergenen</a>
+        <a class="btn primary" href="index.html">Home</a>
+      </nav>
+    </header>
 
-      <!-- Knoppen: later maken we recepten.html en allergenen.html -->
-      <a class="btn" href="recepten.html">
-        <span class="icon">🍴</span>
-        <span>Recepten</span>
-      </a>
+    <section class="hero">
+      <h2>Welkom 👋</h2>
+      <p class="sub">
+        Kies waar je heen wilt. Alles is gemaakt om snel te gebruiken op je telefoon (QR).
+      </p>
+      <div class="hr"></div>
+      <p class="footnote">
+        Tip: Recepten geeft inspiratie met noten/fruit; Allergenen is het snelle check-overzicht.
+      </p>
+    </section>
 
-      <a class="btn" href="allergenen.html">
-        <span class="icon">⚠️</span>
-        <span>Allergenen</span>
-      </a>
+    <section class="grid" aria-label="Snelkoppelingen">
+      <article class="card">
+        <div class="head">
+          <h3 class="title">Recepten</h3>
+          <span class="pill">🍴 inspiratie</span>
+        </div>
+        <div class="body">
+          <p class="desc">Zoek, filter per categorie en ontdek ideeën met noten, zaden en gedroogd fruit.</p>
+          <a class="biglink primary" href="recepten.html">
+            <span><span class="icon">🍴</span> Naar recepten</span>
+            <span class="arrow">›</span>
+          </a>
+        </div>
+      </article>
 
-      <a class="btn" href="https://www.notenexpres.nl/" target="_blank" rel="noopener noreferrer">
-        <span class="icon">🌐</span>
-        <span>Officiële website</span>
-      </a>
+      <article class="card">
+        <div class="head">
+          <h3 class="title">Allergenen</h3>
+          <span class="pill">⚠️ check</span>
+        </div>
+        <div class="body">
+          <p class="desc">Zoek producten, filter op categorie en (optioneel) op specifiek allergeen.</p>
+          <a class="biglink" href="allergenen.html">
+            <span><span class="icon">⚠️</span> Naar allergenen</span>
+            <span class="arrow">›</span>
+          </a>
+        </div>
+      </article>
 
-      <div class="note">Deze pagina is bedoeld als QR-landingspagina.</div>
-    </div>
-  </div>
+      <article class="card">
+        <div class="head">
+          <h3 class="title">Officiële website</h3>
+          <span class="pill">🌐 extern</span>
+        </div>
+        <div class="body">
+          <p class="desc">Ga naar de officiële site van Notenexpres.</p>
+          <a class="biglink" href="https://www.notenexpres.nl/" target="_blank" rel="noopener noreferrer">
+            <span><span class="icon">🌐</span> notenexpres.nl</span>
+            <span class="arrow">↗</span>
+          </a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="head">
+          <h3 class="title">Socials</h3>
+          <span class="pill">✨ volg</span>
+        </div>
+        <div class="body">
+          <p class="desc">Volg Notenexpres op social media.</p>
+          <div class="socialRow">
+            <a class="socialBtn"
+               href="https://www.instagram.com/notenexpres?igsh=MWQ1aXp6cnpuY3U3ZQ%3D%3D"
+               target="_blank" rel="noopener noreferrer">
+              <span class="icon">📸</span> Instagram <span class="arrow">↗</span>
+            </a>
+            <a class="socialBtn"
+               href="https://www.facebook.com/share/1ALKrxz3vY/"
+               target="_blank" rel="noopener noreferrer">
+              <span class="icon">📘</span> Facebook <span class="arrow">↗</span>
+            </a>
+          </div>
+        </div>
+      </article>
+    </section>
+  </main>
 </body>
 </html>
