--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
-  <title>Notenexpres – Start</title>
+  <title>De Notenexpres – Start</title>
 
   <style>
     :root{
@@ -201,7 +201,7 @@
     </header>
 
     <section class="hero">
-      <h2>Welkom bij Notenexpres 👋</h2>
+      <h2>Welkom bij De Notenexpres 👋</h2>
       <p>Zin in iets lekkers? Ontdek onze recepten of check direct de allergenen per product.</p>
     </section>
 
