--- a/allergenen.html
+++ b/allergenen.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
-  <title>Notenexpres – Allergenen</title>
+  <title>De Notenexpres – Allergenen</title>
 
   <style>
     :root{
