--- a/allergenen.html
+++ b/allergenen.html
@@ -487,7 +487,7 @@
       <div class="brandRow">
         <img src="logo.jpg" alt="Notenexpres logo" onerror="this.style.display='none'">
         <div style="min-width:0">
-          <h1>Notenexpres – Allergenen</h1>
+          <h1>De Notenexpres – Allergenen</h1>
           <p>Zoek producten en filter op categorie en meerdere allergenen.</p>
         </div>
       </div>
