--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="brandRow">
         <img src="logo.jpg" alt="Notenexpres logo">
         <div>
-          <h1>Notenexpres – Start</h1>
+          <h1>De Notenexpres – Start</h1>
           <p>Snel checken via QR: allergenen & inspiratie.</p>
         </div>
       </div>
