--- a/recepten.html
+++ b/recepten.html
@@ -389,7 +389,7 @@
       <div class="brand">
         <img src="logo.jpg" alt="Notenexpres logo" onerror="this.style.display='none'">
         <div style="min-width:0">
-          <h1>Notenexpres – Recepten</h1>
+          <h1>De Notenexpres – Recepten</h1>
           <p>Zoek, filter en ontdek ideeën met noten, zaden en gedroogd fruit.</p>
         </div>
       </div>
@@ -401,7 +401,7 @@
     </header>
 
     <section class="hero">
-      <h2>Recepten (30–50 stuks) met categorieën + zoekfunctie</h2>
+      <h2>Ontdek nieuwe ideeën en recepten</h2>
       <p class="sub">
         Tip: zoek op product (bijv. <em>pinda</em>, <em>cashew</em>, <em>cranberry</em>) of op gerecht (bijv. <em>granola</em>, <em>koek</em>).
         Druk op <span class="kbd">Esc</span> om je zoekveld snel leeg te maken.
