--- a/index.html
+++ b/index.html
@@ -114,12 +114,44 @@
     .card{
   display:block;
   border-radius:24px;
-  background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
-  border:1px solid rgba(255,255,255,.10);
-  padding:14px;
+  padding:16px;
+
+  background:
+    linear-gradient(180deg,
+      rgba(229,61,35,.14),
+      rgba(255,255,255,.04) 45%,
+      rgba(0,0,0,.08)
+    );
+
+  border:1px solid rgba(229,61,35,.28);
+  box-shadow:
+    0 18px 50px rgba(0,0,0,.35),
+    inset 0 1px 0 rgba(255,255,255,.08);
+
   color:var(--text);
   text-decoration:none;
-  transition: transform .12s ease, border-color .12s ease, background .12s ease;
+
+  transition:
+    transform .15s ease,
+    border-color .15s ease,
+    box-shadow .15s ease,
+    background .15s ease;
+}
+.card:hover,
+.card:focus-visible{
+  transform: translateY(-2px);
+  border-color: rgba(229,61,35,.55);
+
+  box-shadow:
+    0 26px 70px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.12);
+
+  background:
+    linear-gradient(180deg,
+      rgba(229,61,35,.22),
+      rgba(255,255,255,.05) 45%,
+      rgba(0,0,0,.10)
+    );
 }
 
 .card:hover{
