--- a/index.html
+++ b/index.html
@@ -200,23 +200,38 @@
     }
 
     .chipLink{
-      padding:10px 12px;
-      border-radius:999px;
-      background:rgba(255,255,255,.04);
-      border:1px solid rgba(255,255,255,.10);
-      color:var(--text);
-      text-decoration:none;
-      font-weight:800;
-      display:flex;
-      align-items:center;
-      gap:8px;
-    }
+  padding:10px 14px;
+  border-radius:999px;
 
-    .svgIcon{
-      width:18px;
-      height:18px;
-      fill:currentColor;
-    }
+  background:
+    linear-gradient(180deg,
+      rgba(229,61,35,.14),
+      rgba(255,255,255,.04) 45%,
+      rgba(0,0,0,.08)
+    );
+
+  border:1px solid rgba(229,61,35,.28);
+
+  color:var(--text);
+  text-decoration:none;
+  font-weight:800;
+  font-size:13.5px;
+
+  display:flex;
+  align-items:center;
+  gap:8px;
+
+  box-shadow:
+    0 14px 40px rgba(0,0,0,.30),
+    inset 0 1px 0 rgba(255,255,255,.08);
+
+  transition:
+    transform .15s ease,
+    border-color .15s ease,
+    box-shadow .15s ease,
+    background .15s ease;
+}
+
   </style>
 </head>
 
