--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
     box-shadow .15s ease,
     background .15s ease;
 }
+.svgIcon{
+  width:18px;
+  height:18px;
+  fill:currentColor;
+  flex-shrink:0;
+}
 
   </style>
 </head>
